Replace thumb img with background-image property to prevent stretching.

--- a/public/assets/widget.css
+++ b/public/assets/widget.css
@@ -31,11 +31,8 @@ body {
   height: 116px;
   margin-right: 12px;
   width: 184px;
-}
-
-.wrapper .thumb img {
-  max-height: 116px;
-  width: 184px;
+  background-size: contain;  
+  background-position: center;
 }
 
 .wrapper .meta {
